// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptinMetrics Snapshots android render matches snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "off",
                          "right": "off",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "flex": 1,
                          "paddingTop": 40,
                        }
                      }
                    >
                      <RCTScrollView
                        onContentSizeChange={[Function]}
                        onLayout={[Function]}
                        onScroll={[Function]}
                        scrollEventThrottle={150}
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flex": 1,
                            "paddingTop": 40,
                          }
                        }
                        testID="meta-metrics-container"
                      >
                        <View>
                          <View
                            style={
                              {
                                "flex": 1,
                                "flexDirection": "column",
                                "marginHorizontal": 20,
                                "paddingBottom": 80,
                                "rowGap": 16,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "marginVertical": 12,
                                }
                              }
                            >
                              <Image
                                resizeMode="contain"
                                source={1}
                                style={
                                  {
                                    "alignSelf": "center",
                                    "height": 180,
                                    "width": 200,
                                  }
                                }
                              />
                            </View>
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#121314",
                                  "fontFamily": "Geist-Bold",
                                  "fontSize": 32,
                                  "fontWeight": "700",
                                  "letterSpacing": 0,
                                  "lineHeight": 40,
                                  "marginTop": 8,
                                }
                              }
                              testID="optin-metrics-title-id"
                            >
                              Improve MetaMask
                            </Text>
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#686e7d",
                                  "fontFamily": "Geist-Regular",
                                  "fontSize": 16,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                              testID="optin-metrics-privacy-policy-description"
                            >
                              We’d like to request these permissions. You can opt out or delete your usage data at any time.
                            </Text>
                            <View>
                              <TouchableOpacity
                                activeOpacity={0.7}
                                onPress={[Function]}
                                style={
                                  {
                                    "backgroundColor": "#f3f5f9",
                                    "borderRadius": 12,
                                    "marginBottom": 16,
                                    "padding": 16,
                                  }
                                }
                                testID="optin-metrics-metrics-checkbox"
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "flex-start",
                                      "display": "flex",
                                      "flexDirection": "row",
                                      "gap": 16,
                                      "justifyContent": "space-between",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist-Medium",
                                          "fontSize": 14,
                                          "letterSpacing": 0,
                                          "lineHeight": 22,
                                        }
                                      }
                                    >
                                      Gather basic usage data
                                    </Text>
                                  </View>
                                  <TouchableOpacity
                                    accessibilityRole="checkbox"
                                    accessible={true}
                                    disabled={false}
                                    onPress={[Function]}
                                    style={
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "height": 24,
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      accessibilityRole="checkbox"
                                      style={
                                        {
                                          "alignItems": "center",
                                          "backgroundColor": "#4459ff",
                                          "borderColor": "#4459ff",
                                          "borderRadius": 4,
                                          "borderWidth": 2,
                                          "height": 20,
                                          "justifyContent": "center",
                                          "width": 20,
                                        }
                                      }
                                    >
                                      <SvgMock
                                        accessibilityRole="checkbox"
                                        accessible={true}
                                        color="#ffffff"
                                        fill="currentColor"
                                        height={20}
                                        name="CheckBold"
                                        onPress={[Function]}
                                        style={
                                          {
                                            "height": 20,
                                            "width": 20,
                                          }
                                        }
                                        testID="checkbox-icon-component"
                                        width={20}
                                      />
                                    </View>
                                  </TouchableOpacity>
                                </View>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#686e7d",
                                      "fontFamily": "Geist-Regular",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                      "marginLeft": 0,
                                      "marginTop": 4,
                                    }
                                  }
                                >
                                  We'll collect basic product usage data like general location, clicks, and views. No other information will be stored. 
                                  <Text
                                    accessibilityRole="text"
                                    onPress={[Function]}
                                    style={
                                      {
                                        "color": "#4459ff",
                                        "fontFamily": "Geist-Regular",
                                        "fontSize": 14,
                                        "letterSpacing": 0,
                                        "lineHeight": 22,
                                      }
                                    }
                                  >
                                    Learn more
                                  </Text>
                                </Text>
                              </TouchableOpacity>
                              <TouchableOpacity
                                activeOpacity={0.7}
                                disabled={false}
                                onPress={[Function]}
                                style={
                                  [
                                    {
                                      "backgroundColor": "#f3f5f9",
                                      "borderRadius": 12,
                                      "marginBottom": 16,
                                      "padding": 16,
                                    },
                                    false,
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "flex-start",
                                      "display": "flex",
                                      "flexDirection": "row",
                                      "gap": 16,
                                      "justifyContent": "space-between",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist-Medium",
                                          "fontSize": 14,
                                          "letterSpacing": 0,
                                          "lineHeight": 22,
                                        }
                                      }
                                    >
                                      Marketing updates
                                    </Text>
                                  </View>
                                  <TouchableOpacity
                                    accessibilityRole="checkbox"
                                    accessible={true}
                                    disabled={false}
                                    onPress={[Function]}
                                    style={
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "height": 24,
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      accessibilityRole="checkbox"
                                      style={
                                        {
                                          "alignItems": "center",
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "#b7bbc8",
                                          "borderRadius": 4,
                                          "borderWidth": 2,
                                          "height": 20,
                                          "justifyContent": "center",
                                          "width": 20,
                                        }
                                      }
                                    />
                                  </TouchableOpacity>
                                </View>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#686e7d",
                                      "fontFamily": "Geist-Regular",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                      "marginLeft": 0,
                                      "marginTop": 4,
                                    }
                                  }
                                >
                                  We'll use this data to learn how you interact with our marketing communications. We may share relevant news (like product features).
                                </Text>
                              </TouchableOpacity>
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                      <View
                        style={
                          {
                            "flexDirection": "row",
                            "paddingHorizontal": 16,
                            "paddingTop": 16,
                          }
                        }
                      >
                        <TouchableOpacity
                          accessibilityRole="button"
                          accessible={true}
                          activeOpacity={1}
                          onPress={[Function]}
                          onPressIn={[Function]}
                          onPressOut={[Function]}
                          style={
                            {
                              "alignItems": "center",
                              "alignSelf": "flex-start",
                              "backgroundColor": "#121314",
                              "borderRadius": 12,
                              "flex": 1,
                              "flexDirection": "row",
                              "height": 48,
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "paddingHorizontal": 16,
                            }
                          }
                          testID="optin-metrics-continue-button-id"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#ffffff",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            Continue
                          </Text>
                        </TouchableOpacity>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                  <View
                    collapsable={false}
                    pointerEvents="box-none"
                    style={{}}
                  >
                    <View
                      accessibilityElementsHidden={false}
                      importantForAccessibility="auto"
                      onLayout={[Function]}
                      pointerEvents="box-none"
                      style={null}
                    >
                      <View
                        collapsable={false}
                        pointerEvents="box-none"
                        style={
                          {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "zIndex": 0,
                          }
                        }
                      >
                        <View
                          collapsable={false}
                          style={
                            {
                              "backgroundColor": "rgb(255, 255, 255)",
                              "borderBottomColor": "rgb(216, 216, 216)",
                              "flex": 1,
                              "shadowColor": "rgb(216, 216, 216)",
                              "shadowOffset": {
                                "height": 0.5,
                                "width": 0,
                              },
                              "shadowOpacity": 0.85,
                              "shadowRadius": 0,
                            }
                          }
                        />
                      </View>
                      <View
                        collapsable={false}
                        pointerEvents="box-none"
                        style={
                          {
                            "height": 76,
                            "maxHeight": undefined,
                            "minHeight": undefined,
                            "opacity": undefined,
                            "transform": undefined,
                          }
                        }
                      >
                        <View
                          pointerEvents="none"
                          style={
                            {
                              "height": 20,
                            }
                          }
                        />
                        <View
                          pointerEvents="box-none"
                          style={
                            {
                              "alignItems": "center",
                              "flex": 1,
                              "flexDirection": "row",
                              "justifyContent": "center",
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            pointerEvents="box-none"
                            style={
                              {
                                "marginHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="header"
                              aria-level="1"
                              collapsable={false}
                              numberOfLines={1}
                              onLayout={[Function]}
                              style={
                                {
                                  "color": "rgb(28, 28, 30)",
                                  "fontSize": 17,
                                  "fontWeight": "600",
                                }
                              }
                            >
                              OptinMetrics
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`OptinMetrics Snapshots android render matches snapshot with status bar height to zero 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "off",
                          "right": "off",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "flex": 1,
                          "paddingTop": 40,
                        }
                      }
                    >
                      <RCTScrollView
                        onContentSizeChange={[Function]}
                        onLayout={[Function]}
                        onScroll={[Function]}
                        scrollEventThrottle={150}
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flex": 1,
                            "paddingTop": 40,
                          }
                        }
                        testID="meta-metrics-container"
                      >
                        <View>
                          <View
                            style={
                              {
                                "flex": 1,
                                "flexDirection": "column",
                                "marginHorizontal": 20,
                                "paddingBottom": 80,
                                "rowGap": 16,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "marginVertical": 12,
                                }
                              }
                            >
                              <Image
                                resizeMode="contain"
                                source={1}
                                style={
                                  {
                                    "alignSelf": "center",
                                    "height": 180,
                                    "width": 200,
                                  }
                                }
                              />
                            </View>
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#121314",
                                  "fontFamily": "Geist-Bold",
                                  "fontSize": 32,
                                  "fontWeight": "700",
                                  "letterSpacing": 0,
                                  "lineHeight": 40,
                                  "marginTop": 8,
                                }
                              }
                              testID="optin-metrics-title-id"
                            >
                              Improve MetaMask
                            </Text>
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#686e7d",
                                  "fontFamily": "Geist-Regular",
                                  "fontSize": 16,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                              testID="optin-metrics-privacy-policy-description"
                            >
                              We’d like to request these permissions. You can opt out or delete your usage data at any time.
                            </Text>
                            <View>
                              <TouchableOpacity
                                activeOpacity={0.7}
                                onPress={[Function]}
                                style={
                                  {
                                    "backgroundColor": "#f3f5f9",
                                    "borderRadius": 12,
                                    "marginBottom": 16,
                                    "padding": 16,
                                  }
                                }
                                testID="optin-metrics-metrics-checkbox"
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "flex-start",
                                      "display": "flex",
                                      "flexDirection": "row",
                                      "gap": 16,
                                      "justifyContent": "space-between",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist-Medium",
                                          "fontSize": 14,
                                          "letterSpacing": 0,
                                          "lineHeight": 22,
                                        }
                                      }
                                    >
                                      Gather basic usage data
                                    </Text>
                                  </View>
                                  <TouchableOpacity
                                    accessibilityRole="checkbox"
                                    accessible={true}
                                    disabled={false}
                                    onPress={[Function]}
                                    style={
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "height": 24,
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      accessibilityRole="checkbox"
                                      style={
                                        {
                                          "alignItems": "center",
                                          "backgroundColor": "#4459ff",
                                          "borderColor": "#4459ff",
                                          "borderRadius": 4,
                                          "borderWidth": 2,
                                          "height": 20,
                                          "justifyContent": "center",
                                          "width": 20,
                                        }
                                      }
                                    >
                                      <SvgMock
                                        accessibilityRole="checkbox"
                                        accessible={true}
                                        color="#ffffff"
                                        fill="currentColor"
                                        height={20}
                                        name="CheckBold"
                                        onPress={[Function]}
                                        style={
                                          {
                                            "height": 20,
                                            "width": 20,
                                          }
                                        }
                                        testID="checkbox-icon-component"
                                        width={20}
                                      />
                                    </View>
                                  </TouchableOpacity>
                                </View>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#686e7d",
                                      "fontFamily": "Geist-Regular",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                      "marginLeft": 0,
                                      "marginTop": 4,
                                    }
                                  }
                                >
                                  We'll collect basic product usage data like general location, clicks, and views. No other information will be stored. 
                                  <Text
                                    accessibilityRole="text"
                                    onPress={[Function]}
                                    style={
                                      {
                                        "color": "#4459ff",
                                        "fontFamily": "Geist-Regular",
                                        "fontSize": 14,
                                        "letterSpacing": 0,
                                        "lineHeight": 22,
                                      }
                                    }
                                  >
                                    Learn more
                                  </Text>
                                </Text>
                              </TouchableOpacity>
                              <TouchableOpacity
                                activeOpacity={0.7}
                                disabled={false}
                                onPress={[Function]}
                                style={
                                  [
                                    {
                                      "backgroundColor": "#f3f5f9",
                                      "borderRadius": 12,
                                      "marginBottom": 16,
                                      "padding": 16,
                                    },
                                    false,
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "flex-start",
                                      "display": "flex",
                                      "flexDirection": "row",
                                      "gap": 16,
                                      "justifyContent": "space-between",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist-Medium",
                                          "fontSize": 14,
                                          "letterSpacing": 0,
                                          "lineHeight": 22,
                                        }
                                      }
                                    >
                                      Marketing updates
                                    </Text>
                                  </View>
                                  <TouchableOpacity
                                    accessibilityRole="checkbox"
                                    accessible={true}
                                    disabled={false}
                                    onPress={[Function]}
                                    style={
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "height": 24,
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      accessibilityRole="checkbox"
                                      style={
                                        {
                                          "alignItems": "center",
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "#b7bbc8",
                                          "borderRadius": 4,
                                          "borderWidth": 2,
                                          "height": 20,
                                          "justifyContent": "center",
                                          "width": 20,
                                        }
                                      }
                                    />
                                  </TouchableOpacity>
                                </View>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#686e7d",
                                      "fontFamily": "Geist-Regular",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                      "marginLeft": 0,
                                      "marginTop": 4,
                                    }
                                  }
                                >
                                  We'll use this data to learn how you interact with our marketing communications. We may share relevant news (like product features).
                                </Text>
                              </TouchableOpacity>
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                      <View
                        style={
                          {
                            "flexDirection": "row",
                            "paddingHorizontal": 16,
                            "paddingTop": 16,
                          }
                        }
                      >
                        <TouchableOpacity
                          accessibilityRole="button"
                          accessible={true}
                          activeOpacity={1}
                          onPress={[Function]}
                          onPressIn={[Function]}
                          onPressOut={[Function]}
                          style={
                            {
                              "alignItems": "center",
                              "alignSelf": "flex-start",
                              "backgroundColor": "#121314",
                              "borderRadius": 12,
                              "flex": 1,
                              "flexDirection": "row",
                              "height": 48,
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "paddingHorizontal": 16,
                            }
                          }
                          testID="optin-metrics-continue-button-id"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#ffffff",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            Continue
                          </Text>
                        </TouchableOpacity>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                  <View
                    collapsable={false}
                    pointerEvents="box-none"
                    style={{}}
                  >
                    <View
                      accessibilityElementsHidden={false}
                      importantForAccessibility="auto"
                      onLayout={[Function]}
                      pointerEvents="box-none"
                      style={null}
                    >
                      <View
                        collapsable={false}
                        pointerEvents="box-none"
                        style={
                          {
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "right": 0,
                            "top": 0,
                            "zIndex": 0,
                          }
                        }
                      >
                        <View
                          collapsable={false}
                          style={
                            {
                              "backgroundColor": "rgb(255, 255, 255)",
                              "borderBottomColor": "rgb(216, 216, 216)",
                              "flex": 1,
                              "shadowColor": "rgb(216, 216, 216)",
                              "shadowOffset": {
                                "height": 0.5,
                                "width": 0,
                              },
                              "shadowOpacity": 0.85,
                              "shadowRadius": 0,
                            }
                          }
                        />
                      </View>
                      <View
                        collapsable={false}
                        pointerEvents="box-none"
                        style={
                          {
                            "height": 76,
                            "maxHeight": undefined,
                            "minHeight": undefined,
                            "opacity": undefined,
                            "transform": undefined,
                          }
                        }
                      >
                        <View
                          pointerEvents="none"
                          style={
                            {
                              "height": 20,
                            }
                          }
                        />
                        <View
                          pointerEvents="box-none"
                          style={
                            {
                              "alignItems": "center",
                              "flex": 1,
                              "flexDirection": "row",
                              "justifyContent": "center",
                            }
                          }
                        >
                          <View
                            collapsable={false}
                            pointerEvents="box-none"
                            style={
                              {
                                "marginHorizontal": 16,
                              }
                            }
                          >
                            <Text
                              accessibilityRole="header"
                              aria-level="1"
                              collapsable={false}
                              numberOfLines={1}
                              onLayout={[Function]}
                              style={
                                {
                                  "color": "rgb(28, 28, 30)",
                                  "fontSize": 17,
                                  "fontWeight": "600",
                                }
                              }
                            >
                              OptinMetrics
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`OptinMetrics Snapshots iOS renders correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "rgb(255, 255, 255)",
                "borderBottomColor": "rgb(216, 216, 216)",
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                collapsable={false}
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  {
                    "color": "rgb(28, 28, 30)",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                OptinMetrics
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={-1}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "off",
                          "right": "off",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "backgroundColor": "#ffffff",
                          "flex": 1,
                          "paddingTop": 40,
                        }
                      }
                    >
                      <RCTScrollView
                        onContentSizeChange={[Function]}
                        onLayout={[Function]}
                        onScroll={[Function]}
                        scrollEventThrottle={150}
                        style={
                          {
                            "backgroundColor": "#ffffff",
                            "flex": 1,
                            "paddingTop": 40,
                          }
                        }
                        testID="meta-metrics-container"
                      >
                        <View>
                          <View
                            style={
                              {
                                "flex": 1,
                                "flexDirection": "column",
                                "marginHorizontal": 20,
                                "paddingBottom": 80,
                                "rowGap": 16,
                              }
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "marginVertical": 12,
                                }
                              }
                            >
                              <Image
                                resizeMode="contain"
                                source={1}
                                style={
                                  {
                                    "alignSelf": "center",
                                    "height": 180,
                                    "width": 200,
                                  }
                                }
                              />
                            </View>
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#121314",
                                  "fontFamily": "Geist-Bold",
                                  "fontSize": 32,
                                  "fontWeight": "700",
                                  "letterSpacing": 0,
                                  "lineHeight": 40,
                                  "marginTop": 8,
                                }
                              }
                              testID="optin-metrics-title-id"
                            >
                              Improve MetaMask
                            </Text>
                            <Text
                              accessibilityRole="text"
                              style={
                                {
                                  "color": "#686e7d",
                                  "fontFamily": "Geist-Regular",
                                  "fontSize": 16,
                                  "letterSpacing": 0,
                                  "lineHeight": 24,
                                }
                              }
                              testID="optin-metrics-privacy-policy-description"
                            >
                              We’d like to request these permissions. You can opt out or delete your usage data at any time.
                            </Text>
                            <View>
                              <TouchableOpacity
                                activeOpacity={0.7}
                                onPress={[Function]}
                                style={
                                  {
                                    "backgroundColor": "#f3f5f9",
                                    "borderRadius": 12,
                                    "marginBottom": 16,
                                    "padding": 16,
                                  }
                                }
                                testID="optin-metrics-metrics-checkbox"
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "flex-start",
                                      "display": "flex",
                                      "flexDirection": "row",
                                      "gap": 16,
                                      "justifyContent": "space-between",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist-Medium",
                                          "fontSize": 14,
                                          "letterSpacing": 0,
                                          "lineHeight": 22,
                                        }
                                      }
                                    >
                                      Gather basic usage data
                                    </Text>
                                  </View>
                                  <TouchableOpacity
                                    accessibilityRole="checkbox"
                                    accessible={true}
                                    disabled={false}
                                    onPress={[Function]}
                                    style={
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "height": 24,
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      accessibilityRole="checkbox"
                                      style={
                                        {
                                          "alignItems": "center",
                                          "backgroundColor": "#4459ff",
                                          "borderColor": "#4459ff",
                                          "borderRadius": 4,
                                          "borderWidth": 2,
                                          "height": 20,
                                          "justifyContent": "center",
                                          "width": 20,
                                        }
                                      }
                                    >
                                      <SvgMock
                                        accessibilityRole="checkbox"
                                        accessible={true}
                                        color="#ffffff"
                                        fill="currentColor"
                                        height={20}
                                        name="CheckBold"
                                        onPress={[Function]}
                                        style={
                                          {
                                            "height": 20,
                                            "width": 20,
                                          }
                                        }
                                        testID="checkbox-icon-component"
                                        width={20}
                                      />
                                    </View>
                                  </TouchableOpacity>
                                </View>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#686e7d",
                                      "fontFamily": "Geist-Regular",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                      "marginLeft": 0,
                                      "marginTop": 4,
                                    }
                                  }
                                >
                                  We'll collect basic product usage data like general location, clicks, and views. No other information will be stored. 
                                  <Text
                                    accessibilityRole="text"
                                    onPress={[Function]}
                                    style={
                                      {
                                        "color": "#4459ff",
                                        "fontFamily": "Geist-Regular",
                                        "fontSize": 14,
                                        "letterSpacing": 0,
                                        "lineHeight": 22,
                                      }
                                    }
                                  >
                                    Learn more
                                  </Text>
                                </Text>
                              </TouchableOpacity>
                              <TouchableOpacity
                                activeOpacity={0.7}
                                disabled={false}
                                onPress={[Function]}
                                style={
                                  [
                                    {
                                      "backgroundColor": "#f3f5f9",
                                      "borderRadius": 12,
                                      "marginBottom": 16,
                                      "padding": 16,
                                    },
                                    false,
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "flex-start",
                                      "display": "flex",
                                      "flexDirection": "row",
                                      "gap": 16,
                                      "justifyContent": "space-between",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      {
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <Text
                                      accessibilityRole="text"
                                      style={
                                        {
                                          "color": "#121314",
                                          "fontFamily": "Geist-Medium",
                                          "fontSize": 14,
                                          "letterSpacing": 0,
                                          "lineHeight": 22,
                                        }
                                      }
                                    >
                                      Marketing updates
                                    </Text>
                                  </View>
                                  <TouchableOpacity
                                    accessibilityRole="checkbox"
                                    accessible={true}
                                    disabled={false}
                                    onPress={[Function]}
                                    style={
                                      {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "height": 24,
                                        "opacity": 1,
                                      }
                                    }
                                  >
                                    <View
                                      accessibilityRole="checkbox"
                                      style={
                                        {
                                          "alignItems": "center",
                                          "backgroundColor": "#ffffff",
                                          "borderColor": "#b7bbc8",
                                          "borderRadius": 4,
                                          "borderWidth": 2,
                                          "height": 20,
                                          "justifyContent": "center",
                                          "width": 20,
                                        }
                                      }
                                    />
                                  </TouchableOpacity>
                                </View>
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#686e7d",
                                      "fontFamily": "Geist-Regular",
                                      "fontSize": 14,
                                      "letterSpacing": 0,
                                      "lineHeight": 22,
                                      "marginLeft": 0,
                                      "marginTop": 4,
                                    }
                                  }
                                >
                                  We'll use this data to learn how you interact with our marketing communications. We may share relevant news (like product features).
                                </Text>
                              </TouchableOpacity>
                            </View>
                          </View>
                        </View>
                      </RCTScrollView>
                      <View
                        style={
                          {
                            "flexDirection": "row",
                            "paddingHorizontal": 16,
                            "paddingTop": 16,
                          }
                        }
                      >
                        <TouchableOpacity
                          accessibilityRole="button"
                          accessible={true}
                          activeOpacity={1}
                          onPress={[Function]}
                          onPressIn={[Function]}
                          onPressOut={[Function]}
                          style={
                            {
                              "alignItems": "center",
                              "alignSelf": "flex-start",
                              "backgroundColor": "#121314",
                              "borderRadius": 12,
                              "flex": 1,
                              "flexDirection": "row",
                              "height": 48,
                              "justifyContent": "center",
                              "overflow": "hidden",
                              "paddingHorizontal": 16,
                            }
                          }
                          testID="optin-metrics-continue-button-id"
                        >
                          <Text
                            accessibilityRole="text"
                            style={
                              {
                                "color": "#ffffff",
                                "fontFamily": "Geist-Medium",
                                "fontSize": 16,
                                "letterSpacing": 0,
                                "lineHeight": 24,
                              }
                            }
                          >
                            Continue
                          </Text>
                        </TouchableOpacity>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
